# fractal_explorer

./: .gitignore  CMakeLists.txt  README.md  build_all.bat
src/: fragment.glsl  fragment.h  gl_include.h  gl_render.cpp  gl_render.h  input.cpp  input.h  main.cpp  render.cpp  render.h  shader_compile.cpp  shader_compile.h  shared.h  shell.html  vertex.glsl  vertex.h
